After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692008 - `ostree admin install' fails on missing /ostree
`ostree admin install' fails on missing /ostree
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
2012.13
Other Linux
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-01-18 13:03 UTC by Emanuele Aina
Modified: 2013-01-18 13:39 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Emanuele Aina 2013-01-18 13:03:36 UTC
I just did a fresh checkout with JHBuild as told in the wiki, ostree at commit v2012.13-12-g50ca6b6 and linux-user-chroot from the (in-progress) Debian package at http://anonscm.debian.org/gitweb/?p=collab-maint/linux-user-chroot.git;a=summary:

Following the instructions at https://live.gnome.org/OSTree/GnomeOSTree:
 $ ostree admin install http://ostree.gnome.org/gnome-ostree.cfg
 Fetching http://ostree.gnome.org/gnome-ostree.cfg...
   % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                  Dload  Upload   Total   Spent    Left  Speed
 100   222  100   222    0     0    284      0 --:--:-- --:--:-- --:--:--   720
 Failed to change to directory '/ostree' (No such file or directory)

Also, having to run ostree as root after checking it out with jhbuild is rather cumbersome: jhbuild refuses to run as root and I've had to resort to re-create the jbuild environment manually setting a bunch of variables (PATH, LD_LIBRARY_PATH) from a root shell.
Comment 1 Colin Walters 2013-01-18 13:39:31 UTC
http://git.gnome.org/browse/ostree/commit/?id=13aefbc096b1d15d6abb73ae64e274441203581c

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.