admin install: Ensure /ostree is initialized first

https://bugzilla.gnome.org/show_bug.cgi?id=692008